--- a/README
+++ b/README
@@ -7,8 +7,8 @@ What is Solidocs?
 Solidocs is a PHP MVC framework. Solidocs is a very light and works right out
 of the box. The word "Solidocs" is a combination of Solid + Docs (documents).
 
-Solidocs comes bundled with the Solidcms package which is a Content 
-Management System (CMS) with a complete admin interface.
+Solidocs comes bundled with the Solidadmin, Solidnode and Solidyn packages,
+when combined you get a solid content management system.
 
 Requirements
 ------------
