Updated the README.

--- a/README
+++ b/README
@@ -7,8 +7,8 @@ What is Solidocs?
 Solidocs is a PHP MVC framework. Solidocs is a very light and works right out
 of the box. The word "Solidocs" is a combination of Solid + Docs (documents).
 
-Solidocs comes bundled with the Admin, Node, Dynamic and CLEditor packages,
-when combined you get a solid content management system.
+Solidocs comes bundled with the Admin, Node, Dynamic, Media and CLEditor
+packages, when combined you get a solid content management system.
 
 Requirements
 ------------
