You can now cache regions by settings Dynamic_Plugin_Region::$cache_regions to true. Solidocs_Cache can now cache arrays. Fixed typo in README.

--- a/README
+++ b/README
@@ -14,7 +14,7 @@ Solidocs comes bundled with the following packages:
 - Dynamic
 - Media
 - CKEditor
-- CLEidtor
+- CLEditor
 
 When combined you get a solid content management system (CMS).
 
